logs/offboard_pkg/build.make.666.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘void MultiBody::Logging()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:74:17: error: ‘x_file’ was not declared in this scope
   74 |         fprintf(x_file,"%f, %f, %f, %f, %f, %f", enu.x(), enu.y(), enu.z(), t_enu.x(), t_enu.y(), t_enu.z());
      |                 ^~~~~~
make[2]: *** [CMakeFiles/offboard_pkg_node3.dir/build.make:89: CMakeFiles/offboard_pkg_node3.dir/src/MultiBody.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:204: CMakeFiles/offboard_pkg_node3.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘void MultiBody::Logging()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:74:17: error: ‘x_file’ was not declared in this scope
   74 |         fprintf(x_file,"%f, %f, %f, %f, %f, %f", enu.x(), enu.y(), enu.z(), t_enu.x(), t_enu.y(), t_enu.z());
      |                 ^~~~~~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:89: CMakeFiles/offboard_pkg_node.dir/src/MultiBody.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:393: CMakeFiles/offboard_pkg_node.dir/all] Error 2
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘void MultiBody::Logging()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:74:17: error: ‘x_file’ was not declared in this scope
   74 |         fprintf(x_file,"%f, %f, %f, %f, %f, %f", enu.x(), enu.y(), enu.z(), t_enu.x(), t_enu.y(), t_enu.z());
      |                 ^~~~~~
make[2]: *** [CMakeFiles/offboard_pkg_node2.dir/build.make:89: CMakeFiles/offboard_pkg_node2.dir/src/MultiBody.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:231: CMakeFiles/offboard_pkg_node2.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
